# rust-web-sample-app

./: Cargo.toml
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
tests/: health_check.rs
